state_machine_procmacro/tests/trybuild/02-forgot-to-name.stderr
error: expected identifier
 --> $DIR/02-forgot-to-name.rs:4:9
  |
4 |     One --(A)--> Two
  |         ^

error: I should have seen two identifiers at this point, the state machine name, and the name of the initial state for the first transition. Did you forget the state machine name?
 --> $DIR/02-forgot-to-name.rs:4:9
  |
4 |     One --(A)--> Two
  |         ^
